...
                    android:hint="@string/harga"
                    android:inputType="number"
                    android:textColor="@color/hijau3" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/simpanBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/hijau3"
                android:text="@string/simpan"
...
