...
                            android:textColor="@color/hijau3" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/jenisSampahCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:clickable="true"
                    app:cardBackgroundColor="@color/hijau1"
                    app:cardCornerRadius="25dp"
...
